# nice-slideshow

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
docs/: index.md  modules.md
nice_slideshow/: main.py
tests/: test_foo.py  test_main.py
